[gd_scene load_steps=4 format=2]

[ext_resource path="res://addons/fsm-node/main_screen/graph_nodes/TransitionTheme.tres" type="Theme" id=1]
[ext_resource path="res://addons/fsm-node/main_screen/graph_nodes/ComponentGraphNode.gd" type="Script" id=2]
[ext_resource path="res://addons/fsm-node/main_screen/graph_nodes/HoverTransitionShader.tres" type="Material" id=3]

[node name="Transition" type="GraphNode"]
material = ExtResource( 3 )
margin_right = 103.0
margin_bottom = 54.0
mouse_filter = 1
theme = ExtResource( 1 )
custom_constants/port_offset = 2
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 0.286275, 0, 0.701961, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 0.286275, 0, 0.701961, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 113.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Transition"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="gui_input" from="." to="." method="_gui_input"]
[connection signal="mouse_exited" from="." to="." method="_mouse_exited"]
